fix overflow behavior

--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,10 @@
     pointer-events: none;
 }
 
+body {
+    overscroll-behavior: none
+}
+
 canvas {
     position: fixed;
     z-index: 10;
